# 3-arm-controller

my_robot_controller/config/: robot_config.yaml
my_robot_controller/my_robot_controller/: draw_circle.py  my_first_node.py  pose_subscriber.py  robot.py  turtle_controller.py
my_robot_controller/setups/: package.xml  setup.py
my_robot_controller/urdf/: robot.urdf
